--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,5 +6,10 @@ repos:
     hooks:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
-    -   id: check-yaml
     -   id: check-added-large-files
+-   repo: https://github.com/doublify/pre-commit-rust
+    rev: v1.0
+    hooks:
+        -   id: fmt
+        -   id: cargo-check
+        -   id: clippy
