--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,5 @@ opt-level = 1
 opt-level = 3
 
 [dependencies]
-bevy = "0.13.1"
+bevy = { version = "0.13.1", features = ["dynamic_linking"] }
 rand = "0.8.5"
